Fix hiding issue behind nav and add box shadow

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -2,7 +2,9 @@ header {
   margin: auto;
   font-size: 0.75rem;
   font: cursive;
-  padding-top: 2.5%;
+  padding-top: 60px;
+ // box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+ box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 .carousal-header {
   font-size: 10em;
